# mlopsproject

./: pyproject.toml
MLOPS_FinalProject/: Dockerfile  README.md  Workflow and Functionalities Documentation.docx  api.py  cli.py  cli_run.py  pyproject.toml
MLOPS_FinalProject/models/: model_logistic.pkl  model_svm.pkl
MLOPS_FinalProject/src/: data_cleaning.py  data_ingestion.py  model_evaluate.py  model_test.py  model_train.py
source/: cli_run.py  notebook.ipynb
source/code/: __init__.py  data_analysis.py  model_train_and_evaluate.py
