[project]
name = "mlopsproject"
version = "0.1.0"
description = "MLOPs Final Project"
authors = [
    {name = "Alexandre Ben Haïm",email = "b00811864@essec.edu"},
    {name = "Léo Blanc",email = "b00810822@essec.edu"},
    {name = "Juliette Lacroix",email = "b00814203@essec.edu"},
    {name = "Philippe Miranda-Jean",email = "b00809938@essec.edu"}, 
    {name = "Théo Rossi",email = "b00811854@essec.edu"}, 
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

